--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,7 +17,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web app for notes taking and todo list."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -34,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Tasks App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
